// Real gRPC client logic for SyncTwinâ„¢ simulation, approval, and rejection
// This is a placeholder. Replace with actual gRPC client integration.

export async function simulateSyncTwin(strategy: any) {
  // TODO: Use gRPC-web or node gRPC client to call SyncTwin service
  // Example:
  // const client = new SyncTwinClient('http://localhost:50051');
  // return await client.simulateStrategy(strategy);
  return {
    confidenceScore: 0.92,
    riskProfile: 'moderate',
    projectedNetProfitUplift: 18000,
  };
}

export async function approveSyncTwin() {
  // TODO: Use gRPC client
  return { status: 'approved' };
}

export async function rejectSyncTwin() {
  // TODO: Use gRPC client
  return { status: 'rejected' };
}
